--- a/ProjecteM7/app/src/main/res/values/strings.xml
+++ b/ProjecteM7/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="username">Username:</string>
     <string name="cognom">Cognom:</string>
     <string name="registrar">Registrar</string>
+    <string name="benvingut">Benvingut!!</string>
 </resources>
