--- a/ProjecteM7/app/src/main/res/values/strings.xml
+++ b/ProjecteM7/app/src/main/res/values/strings.xml
@@ -14,5 +14,19 @@
     <string name="usertext">usertext</string>
     <string name="crea_el_teu_usuari_aqui">Crea el teu usuari aqui</string>
     <string name="crea_el_teu_usuari">Crea el teu usuari</string>
+    <string name="title_activity_principal">principal</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_tools">Tools</string>
+    <string name="menu_share">Share</string>
+    <string name="menu_send">Send</string>
 
 </resources>
