--- a/ProjecteM7/app/src/main/res/values/strings.xml
+++ b/ProjecteM7/app/src/main/res/values/strings.xml
@@ -22,11 +22,11 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
-    <string name="menu_tools">Tools</string>
-    <string name="menu_share">Share</string>
-    <string name="menu_send">Send</string>
+    <string name="menu_home">Inicio</string>
+    <string name="menu_gallery">Mis eventos</string>
+    <string name="menu_slideshow">Crear Evento</string>
+    <string name="menu_share">Cerrar Sesion</string>
+    <string name="menu_send">Mi Perfil</string>
+
 
 </resources>
