--- a/ProjecteM7/app/src/main/res/values/strings.xml
+++ b/ProjecteM7/app/src/main/res/values/strings.xml
@@ -11,15 +11,15 @@
     <string name="cognom">Cognom:</string>
     <string name="registrar">Registrar</string>
     <string name="benvingut">Benvingut!!</string>
-    <string name="usertext">usertext</string>
+    <string name="usertext" translatable="false">usertext</string>
     <string name="crea_el_teu_usuari_aqui">Crea el teu usuari aqui</string>
     <string name="crea_el_teu_usuari">Crea el teu usuari</string>
     <string name="title_activity_principal">principal</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_desc">Navigation header</string>
+    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
+    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
+    <string name="nav_header_title" translatable="false">Android Studio</string>
+    <string name="nav_header_subtitle" translatable="false">User</string>
+    <string name="nav_header_desc" translatable="false">Navigation header</string>
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">Inicio</string>
@@ -36,7 +36,7 @@
     <string name="accepto_l_us_de_les_meves_dades">Accepto l\'us de les meves dades</string>
     <string name="title_placeholder">Esports</string>
     <string name="news_placeholder">Actividad</string>
-    <string name="sports_info_placeholder">sports</string>
+    <string name="sports_info_placeholder" translatable="false">sports</string>
 
     <array name="sports_images">
         <item>@drawable/futbol</item>
@@ -57,5 +57,7 @@
         <item>Basquet</item>
         <item>Compras</item>
     </string-array>
+
+
 
 </resources>
