--- a/ProjecteM7/app/src/main/res/values-en/strings.xml
+++ b/ProjecteM7/app/src/main/res/values-en/strings.xml
@@ -30,4 +30,5 @@
     <string name="ets_introvertit">Are you introverted?</string>
     <string name="formulari_de_registre">Sign up form</string>
     <string name="frase_que_mes_et_defineix">Phrase that defines you</string>
+    <string name="correu_electronic">E-mail</string>
 </resources>
