--- a/ProjecteM7/app/src/main/res/values-es/strings.xml
+++ b/ProjecteM7/app/src/main/res/values-es/strings.xml
@@ -30,4 +30,5 @@
     <string name="title_placeholder">Deporte</string>
     <string name="user">Usuario</string>
     <string name="username">Nombre de usuario:</string>
+    <string name="correu_electronic">Correo Electronico</string>
 </resources>
