--- a/ProjecteM7/app/src/main/res/values-ca/strings.xml
+++ b/ProjecteM7/app/src/main/res/values-ca/strings.xml
@@ -30,4 +30,5 @@
     <string name="title_placeholder">Esports</string>
     <string name="user">Usuari</string>
     <string name="username">Nombre de usuario:</string>
+    <string name="correu_electronic">Correu Electronic</string>
 </resources>
